--- a/.gitignore
+++ b/.gitignore
@@ -398,3 +398,23 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+# Vue.js specific
+node_modules/
+dist/
+*.local
+*.env.local
+*.env.*.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Vue.js build and cache
+.vite/
+.vscode/
+.idea/
+.cache/
+
+# Coverage reports
+coverage/
+*.lcov
